[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/minecraft.fnt" type="BitmapFont" id=1]
[ext_resource path="res://ui/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 250.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 16.0

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Hello world!"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 460.0
margin_bottom = 36.0

[node name="ThrowCount" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 66.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Throws: "

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 460.0
margin_bottom = 56.0

[node name="CompleteLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 123.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 1 )
text = "Level Complete!"
